Seccion acerca de

--- a/index.html
+++ b/index.html
@@ -53,24 +53,33 @@
 	<section class="sec_contacto">
 		<div>
 			<i class="fa-solid fa-mobile-screen"></i>
-			<span>+569 82960452</span>
+			<a href="tel:+56982960453">+569 82960452</a>
 		</div>
 		<div>
 			<i class="fa-solid fa-envelope"></i>
-			<span>german.riveross@gmail.com</span>
+			<a href="mailto:german.riveross@gmail.com">
+				german.riveross@gmail.com
+			</a>
 		</div>
 	</section>
 	<!-- Fin sección de contacto. -->
 
-	<section class="sec_descripcion">
+	<!-- Sección acerca de. -->
+	<section class="sec_acercade">
+		<h3>ACERCA DE MÍ</h3>
 		<div>
 			<p>
 				Profesional de la computación con experiencia en docencia, atención al cliente e inclusión. Apasionado por las tecnologías web, la programación y el deporte.
 			</p>
 		</div>
 		<div>
-			
+			<img src="./assets/img/me_deporte.jpg" alt="">
 		</div>
+	</section>
+	<!-- Fin sección acerca de. -->
+
+	<section class="sec_experiencia">
+		<h2>EXPERIENCIA PROFESIONAL</h2>
 	</section>
 
 </body>
