barra de navegación, intento 1 de botón sandwich

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 	<!-- Etiquetas meta -->
 	<meta name="author" content="Germán Riveros S.">
-	<meta name="description" content="Curriculum Vitae Germán A. Riveros Sepúlveda">
-	<meta name="keywords" content="Curriculum, Resume, Formación académica, experiencia profesional">
+	<meta name="description" content="Curriculum Vitae Germán A. Riveros Sepúlveda ingeniero en informática especializado en desarrollo web">
+	<meta name="keywords" content="Curriculum, Resume, Formación académica, experiencia profesional, desarrollador web, ingeniero en informática, computación, Chile">
 
 	<!-- CSS local -->
 	<link rel="stylesheet" href="./assets/css/style.css">
@@ -30,7 +30,7 @@
 	<!-- Fabicon -->
 	<link rel="shortcut icon" href="./assets/img/ico.png" type="image/x-icon">
 
-	<title>Germán Riveros Sepúlveda</title>
+	<title>Germán Riveros Sepúlveda | Desarrollador Web</title>
 </head>
 
 <body>
@@ -39,6 +39,22 @@
 		<a href="#">
 			<img src="./assets/img/logo.png" alt="logo de marca">
 		</a>
+
+		<!-- Botón Sandwich. -->
+		<div class="menu-icon" onclick="toggleMenu()">
+			<div class="bar"></div>
+			<div class="bar"></div>
+			<div class="bar"></div>
+		</div>
+
+		<ul class="menu" id="menu">
+			<li><a href="#">Acerca de</a></li>
+			<li><a href="#">Experiencia</a></li>
+			<li><a href="#">Educación</a></li>
+			<li><a href="#">Idiomas</a></li>
+			<li><a href="#">Aptitudes</a></li>
+			<li><a href="#">Software</a></li>
+		</ul>
 	</nav>
 	<!-- Fin sección de navegación.  -->
 
@@ -82,6 +98,7 @@
 		<h2>EXPERIENCIA PROFESIONAL</h2>
 	</section>
 
+	<script src="./assets/js/script.js"></script>
 </body>
 
 </html>
