--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
 	<!-- Sección de héroe. -->
 	<header>
+		<img src="./assets/img/me.jpg" alt="">
 		<h1>Germán Riveros Sepúlveda</h1>
 		<h2>CURRÍCULUM DIGITAL</h2>
 	</header>
@@ -69,7 +70,7 @@
 	<section class="sec_contacto">
 		<div>
 			<i class="fa-solid fa-mobile-screen"></i>
-			<a href="tel:+56982960453">+569 82960452</a>
+			<a href="tel:+56982960453">+569 82960453</a>
 		</div>
 		<div>
 			<i class="fa-solid fa-envelope"></i>
@@ -94,9 +95,42 @@
 	</section>
 	<!-- Fin sección acerca de. -->
 
+	<!-- Sección de Experiencia. -->
 	<section class="sec_experiencia">
 		<h2>EXPERIENCIA PROFESIONAL</h2>
+
+		<!-- Experiencia 1. -->
+		<article>
+			<h3>Presencia digital</h3>
+			<h4>En EcoPérgolas</h4>
+			<p>
+				En este emprendimiento he realizado aspectos de la presencia digital como el sitio web, el branding, y la estrategia digital a nivel inicial.
+			</p>
+			<p>Marzo 2024 al presente.</p>
+		</article>
+
+		<!-- Experiencia 2. -->
+		<article>
+			<h3>Consultoría TI</h3>
+			<h4>En Centro Budista Kadampa Tara</h4>
+			<p>
+				Como voluntariado para este centro gestioné y di solución a elementos con problemas en el diseño y el funcionamiento de la web. Además,  realicé exitosamente la migración de todo el sitio de un servidor a otro y por último optimicé el sitio para buscadores.
+			</p>
+			<p>Septiembre 2023 - marzo 2024.</p>
+		</article>
+
+		<!-- Experiencia 3. -->
+		<article>
+			<h3>Gestión Web - Atención al cliente</h3>
+			<h4>En Centro Meditación Kadampa Chile</h4>
+			<p>
+				En este proyecto como voluntario tuve que gestionar el contenido de los sitios web: meditación en Chile, meditación en zona sur, meditación en Antofagasta y festivales kadampa utilizando WordPress y WooCommerce. Por otro lado, También trabajé atendiendo clientes en recepción, la tienda, la cafetería, las redes sociales y vía telefónica. También, aprendí a utilizar Avada para el desarrollo front-end  de páginas web y realicé campañas de email marketing.
+			</p>
+			<p>Febrero 2023 - noviembre 2024.</p>
+		</article>
+
 	</section>
+	<!-- Fin sección de Experiencia. -->
 
 	<script src="./assets/js/script.js"></script>
 </body>
