cambios version sumi-e

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 	<!-- Etiquetas meta -->
 	<meta name="author" content="Germán Riveros S.">
-	<meta name="description" content="Curriculum Vitae Germán A. Riveros Sepúlveda ingeniero en informática especializado en desarrollo web">
-	<meta name="keywords" content="Curriculum, Resume, Formación académica, experiencia profesional, desarrollador web, ingeniero en informática, computación, Chile">
+	<meta name="description"
+		content="Curriculum Vitae Germán A. Riveros Sepúlveda ingeniero en informática especializado en desarrollo web">
+	<meta name="keywords"
+		content="Curriculum, Resume, Formación académica, experiencia profesional, desarrollador web, ingeniero en informática, computación, Chile">
 
 	<!-- CSS local -->
 	<link rel="stylesheet" href="./assets/css/style.css">
@@ -60,9 +62,12 @@
 
 	<!-- Sección de héroe. -->
 	<header>
-		<img src="./assets/img/me.jpg" alt="">
-		<h1>Germán Riveros Sepúlveda</h1>
-		<h2>CURRÍCULUM DIGITAL</h2>
+		<div class="glass-card">
+			<img src="./assets/img/me.jpg" alt="">
+			<h1>Germán Riveros Sepúlveda</h1>
+			<h2>CURRÍCULUM DIGITAL</h2>
+		</div>
+
 	</header>
 	<!-- Fin sección de héroe. -->
 
@@ -86,11 +91,12 @@
 		<h3>ACERCA DE MÍ</h3>
 		<div>
 			<p>
-				Profesional de la computación con experiencia en docencia, atención al cliente e inclusión. Apasionado por las tecnologías web, la programación y el deporte.
+				Profesional de la computación con experiencia en docencia, atención al cliente e inclusión. Apasionado
+				por las tecnologías web, la programación y el deporte.
 			</p>
 		</div>
 		<div>
-			<img src="./assets/img/me_deporte.jpg" alt="">
+			<img src="./assets/img/acerca.jpg" alt="">
 		</div>
 	</section>
 	<!-- Fin sección acerca de. -->
@@ -104,7 +110,8 @@
 			<h3>Presencia digital</h3>
 			<h4>En EcoPérgolas</h4>
 			<p>
-				En este emprendimiento he realizado aspectos de la presencia digital como el sitio web, el branding, y la estrategia digital a nivel inicial.
+				En este emprendimiento he realizado aspectos de la presencia digital como el sitio web, el branding, y
+				la estrategia digital a nivel inicial.
 			</p>
 			<p>Marzo 2024 al presente.</p>
 		</article>
@@ -114,7 +121,9 @@
 			<h3>Consultoría TI</h3>
 			<h4>En Centro Budista Kadampa Tara</h4>
 			<p>
-				Como voluntariado para este centro gestioné y di solución a elementos con problemas en el diseño y el funcionamiento de la web. Además,  realicé exitosamente la migración de todo el sitio de un servidor a otro y por último optimicé el sitio para buscadores.
+				Como voluntariado para este centro gestioné y di solución a elementos con problemas en el diseño y el
+				funcionamiento de la web. Además, realicé exitosamente la migración de todo el sitio de un servidor a
+				otro y por último optimicé el sitio para buscadores.
 			</p>
 			<p>Septiembre 2023 - marzo 2024.</p>
 		</article>
@@ -124,7 +133,11 @@
 			<h3>Gestión Web - Atención al cliente</h3>
 			<h4>En Centro Meditación Kadampa Chile</h4>
 			<p>
-				En este proyecto como voluntario tuve que gestionar el contenido de los sitios web: meditación en Chile, meditación en zona sur, meditación en Antofagasta y festivales kadampa utilizando WordPress y WooCommerce. Por otro lado, También trabajé atendiendo clientes en recepción, la tienda, la cafetería, las redes sociales y vía telefónica. También, aprendí a utilizar Avada para el desarrollo front-end  de páginas web y realicé campañas de email marketing.
+				En este proyecto como voluntario tuve que gestionar el contenido de los sitios web: meditación en Chile,
+				meditación en zona sur, meditación en Antofagasta y festivales kadampa utilizando WordPress y
+				WooCommerce. Por otro lado, También trabajé atendiendo clientes en recepción, la tienda, la cafetería,
+				las redes sociales y vía telefónica. También, aprendí a utilizar Avada para el desarrollo front-end de
+				páginas web y realicé campañas de email marketing.
 			</p>
 			<p>Febrero 2023 - noviembre 2024.</p>
 		</article>
