--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
 		<ul class="sidebar">
 			<li onclick="hideSidebar()">
 				<a href="#">
-					<svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#5f6368"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
+					<svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px"
+						fill="#5f6368">
+						<path
+							d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
+					</svg>
 				</a>
 			</li>
 			<li><a href="#">About</a></li>
@@ -60,7 +64,10 @@
 			<li class="hideOnMobile"><a href="#">About</a></li>
 			<li class="hideOnMobile"><a href="#">Skills</a></li>
 			<li class="hideOnMobile"><a href="#">Contact</a></li>
-			<li class="menu-button" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+			<li class="menu-button" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg"
+						height="26px" viewBox="0 -960 960 960" width="26px" fill="#5f6368">
+						<path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
+					</svg></a></li>
 		</ul>
 	</nav>
 	<!-- Fin sección de navegación.  -->
@@ -68,7 +75,9 @@
 
 	<!-- Hero Section. -->
 	<header id="hero-section">
-		<div><p>HELLO_</p></div>
+		<div>
+			<p>HELLO_</p>
+		</div>
 		<div class="container_title">
 			<h1>WELCOME TO MY WEBSITE_</h1>
 		</div>
@@ -81,9 +90,27 @@
 
 	<!-- About section. -->
 	<section id="about">
+		<article>
+			<div class="wrapper">
+				<h2>ABOUT</h2>
+				<div class="linea-about">
+					<hr>
+				</div>
 
+				<div class="contenedor-texto">
+					<p>
+						My name is Germán Riveros, I am a computer engineer and I am currently specializing in front-end
+						development.
+					</p>
+				</div>
+			</div>
+
+			<div>
+				<img src="./assets/img/me.jpg" alt="">
+			</div>
+		</article>
 	</section>
-
+	<!-- End about section. -->
 
 
 	<script src="./assets/js/script.js"></script>
