Feature: animación HELLO_, faltan detalles

--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
 	<!-- Hero Section. -->
 	<header id="hero-section">
 		<div>
-			<p>HELLO_</p>
+			<span class="fadein-h">H</span>
+			<span class="fadein-e">E</span>
+			<span class="fadein-l">L</span>
+			<span class="fadein-l2">L</span>
+			<span class="fadein-o">O</span>
+			<span class="fadein-_">_</span>
 		</div>
 		<div class="container_title">
 			<h1>WELCOME TO MY WEBSITE_</h1>
