Feature: Hero section

--- a/index.html
+++ b/index.html
@@ -81,10 +81,33 @@
 			<span class="fadein-l">L</span>
 			<span class="fadein-l2">L</span>
 			<span class="fadein-o">O</span>
-			<span class="fadein-_">_</span>
+			<span class="underscore_">_</span>
 		</div>
 		<div class="container_title">
-			<h1>WELCOME TO MY WEBSITE_</h1>
+			<h1>
+				<span class="title-web">W</span>
+				<span class="title-web">E</span>
+				<span class="title-web">L</span>
+				<span class="title-web">C</span>
+				<span class="title-web">O</span>
+				<span class="title-web">M</span>
+				<span class="title-web">E</span>
+				<span class="title-web">&nbsp;</span>
+				<span class="title-web">T</span>
+				<span class="title-web">O</span>
+				<span class="title-web">&nbsp;</span>
+				<span class="title-web">M</span>
+				<span class="title-web">Y</span>
+				<span class="title-web">&nbsp;</span>
+				<span class="title-web">W</span>
+				<span class="title-web">E</span>
+				<span class="title-web">B</span>
+				<span class="title-web">S</span>
+				<span class="title-web">I</span>
+				<span class="title-web">T</span>
+				<span class="title-web">E</span>
+				<span class="title-web">_</span>
+			</h1>
 		</div>
 		<div>
 			<i class="fa-solid fa-arrow-down fa-2x"></i>
