--- a/index.html
+++ b/index.html
@@ -76,38 +76,19 @@
 	<!-- Hero Section. -->
 	<header id="hero-section">
 		<div>
-			<span class="fadein-h">H</span>
-			<span class="fadein-e">E</span>
-			<span class="fadein-l">L</span>
-			<span class="fadein-l2">L</span>
-			<span class="fadein-o">O</span>
-			<span class="underscore_">_</span>
+			<span class="greeting fadein-h">H</span>
+			<span class="greeting fadein-e">E</span>
+			<span class="greeting fadein-l">L</span>
+			<span class="greeting fadein-l2">L</span>
+			<span class="greeting fadein-o">O</span>
+			<span class="greeting underscore_">_</span>
 		</div>
 		<div class="container_title">
-			<h1>
-				<span class="title-web">W</span>
-				<span class="title-web">E</span>
-				<span class="title-web">L</span>
-				<span class="title-web">C</span>
-				<span class="title-web">O</span>
-				<span class="title-web">M</span>
-				<span class="title-web">E</span>
-				<span class="title-web">&nbsp;</span>
-				<span class="title-web">T</span>
-				<span class="title-web">O</span>
-				<span class="title-web">&nbsp;</span>
-				<span class="title-web">M</span>
-				<span class="title-web">Y</span>
-				<span class="title-web">&nbsp;</span>
-				<span class="title-web">W</span>
-				<span class="title-web">E</span>
-				<span class="title-web">B</span>
-				<span class="title-web">S</span>
-				<span class="title-web">I</span>
-				<span class="title-web">T</span>
-				<span class="title-web">E</span>
-				<span class="title-web">_</span>
-			</h1>
+				<span class="welcome animation--slideup">WELCOME</span>
+				<span class="welcome animation--slidedown">&nbsp;TO</span>
+				<span class="welcome animation--slideup">&nbsp;MY</span>
+				<span class="welcome animation--slidedown">&nbsp;WEBSITE</span>
+				<span class="welcome underscore_">_</span>
 		</div>
 		<div>
 			<i class="fa-solid fa-arrow-down fa-2x"></i>
