Add section skills and footer

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 			<span class="greeting underscore_">_</span>
 		</div>
 		<div class="container_title">
-				<span class="welcome animation--slideup">WELCOME</span>
-				<span class="welcome animation--slidedown">&nbsp;TO</span>
-				<span class="welcome animation--slideup">&nbsp;MY</span>
-				<span class="welcome animation--slidedown">&nbsp;WEBSITE</span>
-				<span class="welcome underscore_">_</span>
+			<span class="welcome animation--slideup">WELCOME</span>
+			<span class="welcome animation--slidedown">&nbsp;TO</span>
+			<span class="welcome animation--slideup">&nbsp;MY</span>
+			<span class="welcome animation--slidedown">&nbsp;WEBSITE</span>
+			<span class="welcome underscore_">|</span>
 		</div>
 		<div>
 			<i class="fa-solid fa-arrow-down fa-2x"></i>
@@ -121,6 +121,43 @@
 	</section>
 	<!-- End about section. -->
 
+
+	<!-- Skills section. -->
+	<section id="skills">
+		<div class="line-top-skills">
+			<hr>
+		</div>
+		<div>
+			<h2>SKILLS</h2>
+		</div>
+		<div class="line-bottom-skills">
+			<hr>
+		</div>
+	</section>
+	<!-- End skills section. -->
+
+
+	<!-- Footer. -->
+	<footer>
+			<div class="img-footer">
+				<img src="./assets/img/logo.png" alt="Logo del sitio">
+			</div>
+			<div class="icons-social">
+				<a href="https://www.instagram.com/_german_rs_/" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
+				<a href="https://www.linkedin.com/in/german-rs/" target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+				<a href="https://github.com/german-rs" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
+				<a href="https://codepen.io/_german_" target="_blank"><i class="fa-brands fa-codepen fa-2x"></i></a>
+			</div>
+			<div class="text-footer">
+				<p>
+					This website has been created with HTML, CSS and JavaScript.
+				</p>
+				<p>
+					Copyright © 2024 - All rights reserved.
+				</p>
+			</div>
+	</footer>
+	<!-- Footer. -->
 
 	<script src="./assets/js/script.js"></script>
 </body>
