--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<span class="greeting fadein-o">O</span>
 			<span class="greeting underscore_">_</span>
 		</div>
-		<div class="container_title">
+		<div class="container_title" role="heading" aria-level="1">
 			<span class="welcome animation--slideup">WELCOME</span>
 			<span class="welcome animation--slidedown">&nbsp;TO</span>
 			<span class="welcome animation--slideup">&nbsp;MY</span>
@@ -137,25 +137,44 @@
 	<!-- End skills section. -->
 
 
+	<!-- Contact section. -->
+	<section id="contact">
+		<article>
+			<div class="title-contact">
+				<h2>CONTACT</h2>
+				<div class="line-contact">
+					<hr>
+				</div>
+			</div>
+			<div class="text-contact">
+			<p>Click on image &nbsp;<a href="mailto:german.riveross@gmail.com"><i class="fa-regular fa-envelope fa-2x"></i></a></p>
+		</div>
+		</article>
+	</section>
+	<!-- Contact section. -->
+
+
 	<!-- Footer. -->
 	<footer>
-			<div class="img-footer">
-				<img src="./assets/img/logo.png" alt="Logo del sitio">
-			</div>
-			<div class="icons-social">
-				<a href="https://www.instagram.com/_german_rs_/" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
-				<a href="https://www.linkedin.com/in/german-rs/" target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a>
-				<a href="https://github.com/german-rs" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
-				<a href="https://codepen.io/_german_" target="_blank"><i class="fa-brands fa-codepen fa-2x"></i></a>
-			</div>
-			<div class="text-footer">
-				<p>
-					This website has been created with HTML, CSS and JavaScript.
-				</p>
-				<p>
-					Copyright © 2024 - All rights reserved.
-				</p>
-			</div>
+		<div class="img-footer">
+			<img src="./assets/img/logo.png" alt="Logo del sitio">
+		</div>
+		<div class="icons-social">
+			<a href="https://www.instagram.com/_german_rs_/" target="_blank"><i
+					class="fa-brands fa-instagram fa-2x"></i></a>
+			<a href="https://www.linkedin.com/in/german-rs/" target="_blank"><i
+					class="fa-brands fa-linkedin fa-2x"></i></a>
+			<a href="https://github.com/german-rs" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
+			<a href="https://codepen.io/_german_" target="_blank"><i class="fa-brands fa-codepen fa-2x"></i></a>
+		</div>
+		<div class="text-footer">
+			<p>
+				This website has been created with HTML, CSS and JavaScript.
+			</p>
+			<p>
+				Copyright © 2024 - All rights reserved.
+			</p>
+		</div>
 	</footer>
 	<!-- Footer. -->
 
