--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 	<!-- CSS local -->
 	<link rel="stylesheet" href="./assets/css/style.css">
 
+	<script type="importmap">
+		{
+		  "imports": {
+			"three": "https://cdn.jsdelivr.net/npm/three@<version>/build/three.module.js",
+			"three/addons/": "https://cdn.jsdelivr.net/npm/three@<version>/examples/jsm/"
+		  }
+		}
+	  </script>
+
 	<!-- FontAwesome -->
 	<script src="https://kit.fontawesome.com/899edd289a.js" crossorigin="anonymous"></script>
 
@@ -137,6 +146,12 @@
 	</section>
 	<!-- End skills section. -->
 
+
+	<!-- Canvas. -->
+	<section>
+
+	</section>
+	<!-- End canvas. -->
 
 	<!-- Contact section. -->
 	<section id="contact">
