--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<!-- Fabicon -->
+	<link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
+
 	<!-- Etiquetas meta -->
 	<meta name="author" content="Germán Riveros S.">
 	<meta name="description"
 		content="Sitio web Germán Riveros Sepúlveda ingeniero en informática especializado en desarrollo web front-end">
 	<meta name="keywords"
 		content="Germán Riveros Sepúlveda, Germán R. S, desarrollador web, ingeniero en informática, Front-end, Chile">
-
-	<!-- CSS local -->
-	<link rel="stylesheet" href="./assets/css/style.css">
 
 	<!-- FontAwesome -->
 	<script src="https://kit.fontawesome.com/899edd289a.js" crossorigin="anonymous"></script>
@@ -29,50 +29,16 @@
 		href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
 		rel="stylesheet">
 
-	<!-- Fabicon -->
-	<link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
+	<!-- bootstrap. -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+	<!-- CSS local -->
+	<link rel="stylesheet" href="./assets/css/style.css">
 	<title>Germán Riveros Sepúlveda | Desarrollador Web</title>
 </head>
 
 <body>
-
-	<div class="scroll--watcher"></div>
-
-	<!-- Sección de navegación.  -->
-	<nav>
-		<ul class="sidebar">
-			<li onclick="hideSidebar()">
-				<a href="#">
-					<svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px"
-						fill="#5f6368">
-						<path
-							d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
-					</svg>
-				</a>
-			</li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Skills</a></li>
-			<li><a href="#">Contact</a></li>
-		</ul>
-
-		<ul>
-			<li>
-				<a href="#">
-					<img src="./assets/img/logo.png" alt="logo de marca">
-				</a>
-			</li>
-			<li class="hideOnMobile"><a href="#">About</a></li>
-			<li class="hideOnMobile"><a href="#">Skills</a></li>
-			<li class="hideOnMobile"><a href="#">Contact</a></li>
-			<li class="menu-button" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg"
-						height="26px" viewBox="0 -960 960 960" width="26px" fill="#5f6368">
-						<path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
-					</svg></a></li>
-		</ul>
-	</nav>
-	<!-- Fin sección de navegación.  -->
-
 
 	<!-- Hero Section. -->
 	<header id="hero-section">
@@ -98,67 +64,7 @@
 	<!-- Hero Section. -->
 
 
-	<!-- About section. -->
-	<section id="about">
-		<article>
-			<div class="wrapper">
-				<h2>ABOUT</h2>
-				<div class="linea-about">
-					<hr>
-				</div>
 
-				<div class="contenedor-texto">
-					<p>
-						My name is Germán Riveros, I am a computer engineer and I am currently specializing in front-end
-						development.
-					</p>
-				</div>
-			</div>
-
-			<div>
-				<img src="./assets/img/me.jpg" alt="">
-			</div>
-		</article>
-	</section>
-	<!-- End about section. -->
-
-
-	<!-- Skills section. -->
-	<section id="skills">
-		<div class="line-top-skills">
-			<hr>
-		</div>
-		<div>
-			<h2>SKILLS</h2>
-		</div>
-		<div class="line-bottom-skills">
-			<hr>
-		</div>
-	</section>
-	<!-- End skills section. -->
-
-
-	<!-- Canvas. -->
-	<section>
-
-	</section>
-	<!-- End canvas. -->
-
-	<!-- Contact section. -->
-	<section id="contact">
-		<article>
-			<div class="title-contact">
-				<h2>CONTACT</h2>
-				<div class="line-contact">
-					<hr>
-				</div>
-			</div>
-			<div class="text-contact">
-			<p>Click on image &nbsp;<a href="mailto:german.riveross@gmail.com"><i class="fa-regular fa-envelope fa-2x"></i></a></p>
-		</div>
-		</article>
-	</section>
-	<!-- Contact section. -->
 
 
 	<!-- Footer. -->
@@ -176,7 +82,7 @@
 		</div>
 		<div class="text-footer">
 			<p>
-				This website has been created with HTML, CSS and JavaScript.
+				This site has been created by Germán Riveros S.
 			</p>
 			<p>
 				Copyright © 2024 - All rights reserved.
@@ -185,7 +91,24 @@
 	</footer>
 	<!-- Footer. -->
 
+
+	<!-- JQuery. -->
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+	<!-- Popper.  -->
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+		integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+		crossorigin="anonymous"></script>
+
+
+	<!-- bootstrap. -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+		crossorigin="anonymous"></script>
+
+	<!-- JS local. -->
 	<script src="./assets/js/script.js"></script>
+
 </body>
 
 </html>
