Se agrega el navbar y las secciones.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
 	Autor: Germán A. Riveros Sepúlveda.
-	Desarrollado solo con HTML, CSS y JS.
+	
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -39,6 +39,60 @@
 </head>
 
 <body>
+	<!-- Navbar. -->
+	<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">
+				<img src="./assets/img/favicon.png" alt="Logo">
+			</a>
+			<button class="navbar-toggler me-5" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-5 ms-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Skills</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact</a>
+					</li>
+
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<!-- End navbar. -->
+
+	<!-- Section About. -->
+	<section id="about">
+	</section>
+	<!-- End section About. -->
+
+
+	<!-- Section Skills. -->
+	<section id="skills">
+	</section>
+	<!-- End section Skills. -->
+
+
+	<!-- Section Works. -->
+	<section id="works">
+	</section>
+	<!-- End section Works. -->
+
+
+	<!-- Section contact. -->
+	<section id="contact">
+	</section>
+	<!-- End sectioncontacts. -->	
 
 	<!-- Hero Section. -->
 	<header id="hero-section">
