--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <body>
 	<!-- Navbar. -->
-	<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+	<nav class="navbar navbar-expand-lg fixed-top glassmorphism-navbar">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">
 				<img src="./assets/img/favicon.png" alt="Logo">
@@ -53,16 +53,19 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-5 ms-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Home</a>
+						<a class="nav-link active" aria-current="page" href="#">Inicio</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">About</a>
+						<a class="nav-link" href="#">Acerca</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Skills</a>
+						<a class="nav-link" href="#">Habilidades</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Contact</a>
+						<a class="nav-link" href="#">Trabajos</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contacto</a>
 					</li>
 
 				</ul>
@@ -70,6 +73,33 @@
 		</div>
 	</nav>
 	<!-- End navbar. -->
+
+
+	<!-- Hero Section. -->
+	<header id="hero-section">
+		<div>
+			<span class="greeting fadein-h">H</span>
+			<span class="greeting fadein-o">O</span>
+			<span class="greeting fadein-l">L</span>
+			<span class="greeting fadein-a">A</span>
+			<span class="greeting underscore_">_</span>
+		</div>
+		<div class="container_title" role="heading" aria-level="1">
+			<span class="welcome animation--slideup">BIEN</span>
+			<span class="welcome animation--slideup">VENID@</span>
+			<span class="welcome animation--slidedown">&nbsp;A</span>
+			<span class="welcome animation--slideup">&nbsp;MI</span>
+			<span class="welcome animation--slidedown">&nbsp;SITIO</span>
+			<span class="welcome animation--slideup">&nbsp;WEB</span>
+			<span class="welcome underscore_">|</span>
+		</div>
+		<div>
+			<i class="fa-solid fa-arrow-down fa-2x"></i>
+		</div>
+	</header>
+	<!-- Hero Section. -->
+
+
 
 	<!-- Section About. -->
 	<section id="about">
@@ -92,30 +122,9 @@
 	<!-- Section contact. -->
 	<section id="contact">
 	</section>
-	<!-- End sectioncontacts. -->	
+	<!-- End section contact. -->	
 
-	<!-- Hero Section. -->
-	<header id="hero-section">
-		<div>
-			<span class="greeting fadein-h">H</span>
-			<span class="greeting fadein-e">E</span>
-			<span class="greeting fadein-l">L</span>
-			<span class="greeting fadein-l2">L</span>
-			<span class="greeting fadein-o">O</span>
-			<span class="greeting underscore_">_</span>
-		</div>
-		<div class="container_title" role="heading" aria-level="1">
-			<span class="welcome animation--slideup">WELCOME</span>
-			<span class="welcome animation--slidedown">&nbsp;TO</span>
-			<span class="welcome animation--slideup">&nbsp;MY</span>
-			<span class="welcome animation--slidedown">&nbsp;WEBSITE</span>
-			<span class="welcome underscore_">|</span>
-		</div>
-		<div>
-			<i class="fa-solid fa-arrow-down fa-2x"></i>
-		</div>
-	</header>
-	<!-- Hero Section. -->
+
 
 
 
