--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<!-- Etiquetas meta -->
 	<meta name="author" content="Germán Riveros S.">
 	<meta name="description"
-		content="Sitio web Germán Riveros Sepúlveda ingeniero en informática especializado en desarrollo web front-end">
+		content="Sitio web de Germán Riveros Sepúlveda ingeniero en informática especializado en desarrollo web front-end">
 	<meta name="keywords"
-		content="Germán Riveros Sepúlveda, Germán R. S, desarrollador web, ingeniero en informática, Front-end, Chile">
+		content="Germán Riveros Sepúlveda, Germán R. S., german-rs, german_rs, desarrollador web, ingeniero en informática, Front-end, Chile">
 
 	<!-- FontAwesome -->
 	<script src="https://kit.fontawesome.com/899edd289a.js" crossorigin="anonymous"></script>
@@ -56,7 +56,7 @@
 						<a class="nav-link active" aria-current="page" href="#">Inicio</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Acerca</a>
+						<a class="nav-link" href="#about">Acerca</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Habilidades</a>
@@ -103,6 +103,23 @@
 
 	<!-- Section About. -->
 	<section id="about">
+
+		<article class="about__info">
+
+			<div class="about__text">
+				<h2>Acerca de</h2>
+				<p>
+					Hola. Mi nombre es Germán Riveros, soy ingeniero en informática y 
+					actualmente me estoy especializando en desarrollo web front-end. 
+				</p>
+			</div>
+
+			<div class="about__image">
+				<img src="./assets/img/me.jpeg" alt="Germán Riveros Sepúlveda - german-rs">
+			</div>
+
+		</article>
+
 	</section>
 	<!-- End section About. -->
 
@@ -122,7 +139,7 @@
 	<!-- Section contact. -->
 	<section id="contact">
 	</section>
-	<!-- End section contact. -->	
+	<!-- End section contact. -->
 
 
 
@@ -141,14 +158,15 @@
 			<a href="https://www.linkedin.com/in/german-rs/" target="_blank"><i
 					class="fa-brands fa-linkedin fa-2x"></i></a>
 			<a href="https://github.com/german-rs" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
-			<a href="https://codepen.io/_german_" target="_blank"><i class="fa-brands fa-codepen fa-2x"></i></a>
 		</div>
 		<div class="text-footer">
 			<p>
 				This site has been created by Germán Riveros S.
 			</p>
 			<p>
-				Copyright © 2024 - All rights reserved.
+				Licensed under a Copyleft 
+				<img class="copyleft__image" src="./assets/img/copyleft.png" alt="copyleft">
+				. 2024
 			</p>
 		</div>
 	</footer>
