detalle en about

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			<div class="about__text">
 				<h2>Acerca de</h2>
 				<p>
-					Hola. Mi nombre es Germán Riveros, soy ingeniero en informática y 
+					Hola &#9996;&#65039;. Mi nombre es Germán Riveros, soy ingeniero en informática y 
 					actualmente me estoy especializando en desarrollo web front-end. 
 				</p>
 			</div>
