--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<a class="nav-link" href="#about">Acerca</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Habilidades</a>
+						<a class="nav-link" href="#skills">Habilidades</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Trabajos</a>
@@ -100,35 +100,58 @@
 	<!-- Hero Section. -->
 
 
+	<main class="main">
 
-	<!-- Section About. -->
-	<section id="about">
+		<!-- Section About. -->
+		<section id="about">
 
-		<article class="about__info">
+			<article class="about__info">
+				<div class="about__text">
+					<h2 class="about__header">ACERCA DE</h2>
 
-			<div class="about__text">
-				<h2>Acerca de</h2>
-				<p>
-					Hola &#9996;&#65039;. Mi nombre es Germán Riveros, soy ingeniero en informática y 
-					actualmente me estoy especializando en desarrollo web front-end. 
-				</p>
+					<p>
+						Hola &#9996;&#65039;. Soy Germán Riveros, ingeniero en informática y
+						actualmente me estoy especializando en desarrollo web front-end.
+					</p>
+				</div>
+
+				<div class="about__image">
+					<img src="./assets/img/me.jpeg" alt="Germán Riveros Sepúlveda - german-rs">
+				</div>
+
+			</article>
+
+		</section>
+		<!-- End section About. -->
+
+
+		<!-- Section Skills. -->
+		<section id="skills">
+			<div class="skills__text">
+				<h2 class="skills__header">HABILIDADES</h2>
+				<p>Estas son las tecnologías y lenguajes en los que estoy profundizando.</p>
 			</div>
-
-			<div class="about__image">
-				<img src="./assets/img/me.jpeg" alt="Germán Riveros Sepúlveda - german-rs">
+			<div class="skills__techs">
+				<div class="moving-div">
+					<i class="fa-brands fa-css3-alt fa-3x"></i>
+				</div>
+				<div class="moving-div">
+					<i class="fa-brands fa-js fa-3x"></i>
+				</div>
+				<div class="moving-div">
+					<i class="fa-brands fa-bootstrap fa-3x"></i>	
+				</div>
+				<div class="moving-div">
+					<i class="fa-brands fa-github fa-3x"></i>
+				</div>
+				<div class="moving-div">
+					<i class="fa-brands fa-html5 fa-3x"></i>
+				</div>
 			</div>
+		</section>
+		<!-- End section Skills. -->
 
-		</article>
-
-	</section>
-	<!-- End section About. -->
-
-
-	<!-- Section Skills. -->
-	<section id="skills">
-	</section>
-	<!-- End section Skills. -->
-
+	</main>
 
 	<!-- Section Works. -->
 	<section id="works">
@@ -164,7 +187,7 @@
 				This site has been created by Germán Riveros S.
 			</p>
 			<p>
-				Licensed under a Copyleft 
+				Licensed under a Copyleft
 				<img class="copyleft__image" src="./assets/img/copyleft.png" alt="copyleft">
 				. 2024
 			</p>
