agregando sass a habilidades

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	<link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
 
 	<!-- Etiquetas meta -->
-	<meta name="author" content="Germán Riveros S.">
+	<meta name="author" content="Germán Riveros">
 	<meta name="description"
-		content="Sitio web de Germán Riveros Sepúlveda ingeniero en informática especializado en desarrollo web front-end">
+		content="Germán Riveros Sepúlveda, ingeniero en informática especializado en desarrollo web front-end. Explora mi portafolio digital.">
 	<meta name="keywords"
-		content="Germán Riveros Sepúlveda, Germán R. S., german-rs, german_rs, desarrollador web, ingeniero en informática, Front-end, Chile">
+		content="Germán Riveros Sepúlveda, Germán R. S., german-rs, german_rs, desarrollador web, ingeniero en informática, Front-end, Chile, HTML, CSS, Javascript">
 
 	<!-- FontAwesome -->
 	<script src="https://kit.fontawesome.com/899edd289a.js" crossorigin="anonymous"></script>
@@ -146,6 +146,9 @@
 				</div>
 				<div class="moving-div">
 					<i class="fa-brands fa-html5 fa-3x"></i>
+				</div>
+				<div class="moving-div">
+					<i class="fa-brands fa-sass fa-3x"></i>
 				</div>
 			</div>
 		</section>
