Sección acerca de

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="robots" content="index, follow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- Fabicon -->
@@ -17,7 +18,7 @@
 	<meta name="description"
 		content="Germán Riveros Sepúlveda, ingeniero en informática especializado en desarrollo web front-end. Explora mi portafolio digital.">
 	<meta name="keywords"
-		content="Germán Riveros Sepúlveda, Germán R. S., german-rs, german_rs, desarrollador web, ingeniero en informática, Front-end, Chile, HTML, CSS, Javascript">
+		content="Germán Riveros, Germán R. S., german-rs, german_rs, desarrollador web, ingeniero en informática, Front-end, Chile, HTML, CSS, Javascript">
 
 	<!-- FontAwesome -->
 	<script src="https://kit.fontawesome.com/899edd289a.js" crossorigin="anonymous"></script>
@@ -35,7 +36,7 @@
 
 	<!-- CSS local -->
 	<link rel="stylesheet" href="./assets/css/style.css">
-	<title>Germán Riveros Sepúlveda | Desarrollador Web</title>
+	<title>Germán Riveros S. | Ingeniero en informática</title>
 </head>
 
 <body>
@@ -84,7 +85,7 @@
 			<span class="greeting fadein-a">A</span>
 			<span class="greeting underscore_">_</span>
 		</div>
-		<div class="container_title" role="heading" aria-level="1">
+		<div class="container_title">
 			<span class="welcome animation--slideup">BIEN</span>
 			<span class="welcome animation--slideup">VENID@</span>
 			<span class="welcome animation--slidedown">&nbsp;A</span>
@@ -104,19 +105,18 @@
 
 		<!-- Section About. -->
 		<section id="about">
-
+		
 			<article class="about__info">
 				<div class="about__text">
-					<h2 class="about__header">ACERCA DE</h2>
-
+					<h1 class="main__header">Germán Riveros</h1>
 					<p>
-						Hola &#9996;&#65039;. Soy Germán Riveros, ingeniero en informática y
-						actualmente me estoy especializando en desarrollo web front-end.
+						Hola &#9996;&#65039;, soy ingeniero en informática y actualmente me estoy 
+						especializando en <strong>desarrollo web front-end</strong>.
 					</p>
 				</div>
 
 				<div class="about__image">
-					<img src="./assets/img/me.jpeg" alt="Germán Riveros Sepúlveda - german-rs">
+					<img src="./assets/img/me.jpeg" alt="Germán Riveros Sepúlveda">
 				</div>
 
 			</article>
@@ -128,7 +128,7 @@
 		<!-- Section Skills. -->
 		<section id="skills">
 			<div class="skills__text">
-				<h2 class="skills__header">HABILIDADES</h2>
+				<h3 class="skills__header">HABILIDADES</h3>
 				<p>Estas son las tecnologías y lenguajes en los que estoy profundizando.</p>
 			</div>
 			<div class="skills__techs">
@@ -166,10 +166,6 @@
 	<section id="contact">
 	</section>
 	<!-- End section contact. -->
-
-
-
-
 
 
 
