--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<nav class="navbar navbar-expand-lg fixed-top glassmorphism-navbar">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">
-				<img src="./assets/img/favicon.png" alt="Logo">
+				<img src="./assets/img/favicon.png" alt="Logo Germán Riveros">
 			</a>
 			<button class="navbar-toggler me-5" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -63,7 +63,7 @@
 						<a class="nav-link" href="#skills">Habilidades</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Trabajos</a>
+						<a class="nav-link" href="#works">Trabajos</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Contacto</a>
@@ -105,13 +105,14 @@
 
 		<!-- Section About. -->
 		<section id="about">
-		
+			<h3 class="about__header">ACERCA DE</h3>
 			<article class="about__info">
 				<div class="about__text">
+					<p>Hola &#9996;&#65039; soy </p>
 					<h1 class="main__header">Germán Riveros</h1>
-					<p>
-						Hola &#9996;&#65039;, soy ingeniero en informática y actualmente me estoy 
-						especializando en <strong>desarrollo web front-end</strong>.
+					<p> ingeniero en informática y actualmente me estoy
+						especializando en
+					<h2 class="main__header--h2">desarrollo web front-end</h2>.
 					</p>
 				</div>
 
@@ -139,7 +140,7 @@
 					<i class="fa-brands fa-js fa-3x"></i>
 				</div>
 				<div class="moving-div">
-					<i class="fa-brands fa-bootstrap fa-3x"></i>	
+					<i class="fa-brands fa-bootstrap fa-3x"></i>
 				</div>
 				<div class="moving-div">
 					<i class="fa-brands fa-github fa-3x"></i>
@@ -154,25 +155,51 @@
 		</section>
 		<!-- End section Skills. -->
 
+
+		<!-- Section Works. -->
+		<section id="works">
+			<div class="works__text mb-5">
+				<h3 class="works__header">TRABAJOS</h3>
+				<p>Estos son algunos de los trabajos que he realizado para el bootcamp.</p>
+			</div>
+			<section class="works__cards">
+				<div class="card card-glass" style="width: 18rem;">
+					<img src="./assets/img/works/blogfrontend.webp" class="card-img-top rounded-top-img" alt="...">
+					<div class="card-body">
+						<h5 class="card-title text-light">Blog FrontEnd</h5>
+						<p class="card-text text-light">El objetivo de este desafío fue implementar la metodología BEM
+							(Block, Element, Modifier) para
+							la estructuración del CSS, junto con el uso de Sass siguiendo el patrón de arquitectura 7-1.
+						</p>
+						<div class="mt-2">
+							<a href="https://germanriveros.cl/BlogFrontEnd-Sass/" target="_blank"
+								class="btn btn-glass text-light">Ver sitio</a>
+							<a href="https://github.com/german-rs/BlogFrontEnd-Sass" target="_blank"
+								class="btn btn-glass text-light">Ver código</a>
+						</div>
+					</div>
+				</div>
+			</section>
+		</section>
+		<!-- End section Works. -->
+
+		<!-- Section contact. -->
+		<section id="contact">
+			<h3 class="contact__header">CONTACTO</h3>
+			<div class="p-5">
+				<a class="contact__email" href="mailto:german.riveross@gmail.com">
+					<i class="fa-regular fa-envelope fa-3x pulsing-shadow"></i>
+				</a>
+			</div>
+		</section>
+		<!-- End section contact. -->
 	</main>
-
-	<!-- Section Works. -->
-	<section id="works">
-	</section>
-	<!-- End section Works. -->
-
-
-	<!-- Section contact. -->
-	<section id="contact">
-	</section>
-	<!-- End section contact. -->
-
 
 
 	<!-- Footer. -->
 	<footer>
 		<div class="img-footer">
-			<img src="./assets/img/logo.png" alt="Logo del sitio">
+			<img src="./assets/img/logo.png" alt="Logo Germán Riveros">
 		</div>
 		<div class="icons-social">
 			<a href="https://www.instagram.com/_german_rs_/" target="_blank"><i
