--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<a class="nav-link" href="#works">Trabajos</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Contacto</a>
+						<a class="nav-link" href="#contact">Contacto</a>
 					</li>
 
 				</ul>
