solucionando bootstrap.js

--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 	<!-- JS local. -->
-	<script type="module" src="./assets/js/script.js"></script>
+	<script type="module" src="./assets/js/index.js"></script>
+	<script src="./assets/js/script.js"></script>
 
 </body>
 
