bootstrap js aun con problemas

--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
 
 
 	<!-- JS local. -->
-	<script type="module" src="./assets/js/index.js"></script>
+	<script type="application/javascript" src="./assets/js/index.js"></script>
+	
 </body>
 
 </html>
