--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
 	Author: Germán Riveros Sepúlveda.
-	
+	Portafolio digital.
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -206,10 +206,14 @@
 	</footer>
 	<!-- Footer. -->
 
+	<!-- bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+		crossorigin="anonymous"></script>
 
 	<!-- JS local. -->
-	<script type="application/javascript" src="./assets/js/index.js"></script>
-	
+	<script src="./assets/js/index.js"></script>
+
 </body>
 
 </html>
