--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
 	Author: Germán Riveros Sepúlveda.
-	
+	Portafolio digital
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -203,17 +203,16 @@
 			</p>
 			<p>Licensed under a Copyleft license. © 2024.</p>
 		</div>
-		<!-- <img src="./assets/img/copyleft.png" alt="copyleft"> -->
 	</footer>
 	<!-- Footer. -->
 
-
-	<!-- JQuery. -->
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<!-- bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+		crossorigin="anonymous"></script>
 
 	<!-- JS local. -->
-	<script type="module" src="./assets/js/index.js"></script>
-	<script src="./assets/js/script.js"></script>
+	<script src="./assets/js/index.js"></script>
 
 </body>
 
