--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
 		<div class="skills__text">
 			<h3 class="skills__header">HABILIDADES</h3>
 			<p class="skills__description">Estas son las tecnologías y lenguajes en los que estoy profundizando.</p>
+			<ul class="skills__list">
+				<li class="skills__list-item">HTML</li>
+				<li class="skills__list-item">CSS</li>
+				<li class="skills__list-item">JavaScript</li>
+				<li class="skills__list-item">Git</li>
+				<li class="skills__list-item">Sass</li>
+				<li class="skills__list-item">Bootstrap</li>
+				<li class="skills__list-item">Github</li>
+				<li class="skills__list-item">NodeJS</li>
+			</ul>
 		</div>
 		<div class="skills__technologies">
 			<div class="skills__technology skills__technology--css">
@@ -126,6 +136,9 @@
 			</div>
 			<div class="skills__technology skills__technology--git">
 				<i class="fa-brands fa-git-alt fa-3x"></i>
+			</div>
+			<div class="skills__technology skills__technology--node">
+				<i class="fa-brands fa-node-js fa-3x"></i>
 			</div>
 		</div>
 	</section>
