--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<!-- Hero section.  -->
 	<main class="main">
 		<!-- Navbar. -->
-		<nav class="navbar navbar-expand-lg fixed-top border-body" data-bs-theme="dark">
+		<nav class="navbar navbar-expand-lg border-body" data-bs-theme="dark">
 			<div class="container-fluid container">
 				<a class="navbar-brand" href="#">
 					<img class="navbar-brand__image" src="./assets/img/logo.png" alt="Logo Germán Riveros">
